fix(doc): prevent heading spacing with hidden elements

--- a/packages/storybook/src/components/heading/heading.module.css
+++ b/packages/storybook/src/components/heading/heading.module.css
@@ -6,7 +6,6 @@
 .heading-6 {
   display: flex;
   flex-flow: row;
-  column-gap: .5rem;
   align-items: center;
   margin-bottom: 0;
   color: var(--ods-color-primary-800);
