--- a/packages/storybook/src/components/technicalSpecification/classModule.module.css
+++ b/packages/storybook/src/components/technicalSpecification/classModule.module.css
@@ -17,6 +17,7 @@
 
 .class-module__event-title-link,
 .class-module__method-title-link {
+  margin-left: .5rem;
   font-size: 12px;
 }
 
